update Readme.md
more reflection, read and modify fields