@@ -1,5 +1,15 @@
+https://github.com/SimonHGR/Int-Java-ACE
 
 https://www.youtube.com/@DancingCloudServices
 
 
 https://docs.oracle.com/en/java/javase/11/docs/api/index.html
+
+Josh Bloch   Effective Java
+
+Visual VM -- look at number of generations
+
+
+use self for singleton internal name.
+
+-XX:+PrintCompilation -XX:+PrintGC
